Add DESIGN_PROGRESS.md — step-by-step design log , Refactor idempotency lock to service layer; make security opt-in; update README